Changed some lambda expressions to method references in .map(), removed some unused elements, redundant expressions, more modern string representations, unused imports, unused exceptions and fixed bad README table formatting