@@ -37,7 +37,7 @@ public interface DiscordUtils {
     default String getFullCommandName(SlashCommandInteraction commandInteraction) {
         StringBuilder commandName = new StringBuilder(commandInteraction.getCommandName());
 
-        SlashCommandInteractionOption option = commandInteraction.getOptions().get(0);
+        SlashCommandInteractionOption option = commandInteraction.getOptions().getFirst();
 
         while (option.isSubcommandOrGroup()) {
             commandName.append(" %s".formatted(option.getName()));
@@ -319,7 +319,7 @@ public interface DiscordUtils {
             costStr.append(" and %d hours".formatted(hours));
         }
 
-        log.debug("Duration: [{}]", costStr.toString());
+        log.debug("Duration: [{}]", costStr);
         return costStr.toString();
     }
 
